raffia/tests/error/scss/at-rule/forward/with-before-as.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but found `<ident>`
  ┌─ with-before-as.scss:1:31
  │
1 │ @forward "other" with ($a: b) as c-*;
  │                               ^^


